mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: solar-system
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
