solar-system-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system
  namespace: solar-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx # Alignement correct (2 espaces)
  tls:
  - hosts:
    - solar-system.local # Doit être identique au host des rules pour le certificat TLS
    secretName: solar-local-tls
  rules:
  - host: solar-system.local # Alignement correct (2 espaces)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-system
            port:
              number: 3000
